[metadata]
name = rally
summary = Benchmark System for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/rally/
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    rally

data_files =
    etc/bash_completion.d =
        etc/rally.bash_completion

[entry_points]
console_scripts =
    rally = rally.cli.main:main
    rally-manage = rally.cli.manage:main
oslo.config.opts =
    rally = rally.common.opts:list_opts

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
