[metadata]
name = rally
summary = Generic Testing Framework & Tool that unifies all types of testing.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/rally/latest/
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    rally

data_files =
    etc/bash_completion.d =
        etc/rally.bash_completion

[entry_points]
console_scripts =
    rally = rally.cli.main:main
oslo.config.opts =
    rally = rally.common.opts:list_opts
oslo.config.opts.defaults =
    rally = rally.common.opts:update_opt_defaults

[global]
setup-hooks =
    pbr.hooks.setup_hook

[extras]
mysql =
  PyMySQL>=0.7.6  # MIT
postgres =
  psycopg2>=2.5  # LGPL/ZPL

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
