[metadata]
name = rally
summary = Generic Testing Framework & Tool that unifies all types of testing.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/rally/latest/
license = Apache License, Version 2.0
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    rally

data_files =
    etc/bash_completion.d =
        etc/rally.bash_completion

[entry_points]
console_scripts =
    rally = rally.cli.main:main
oslo.config.opts =
    rally = rally.common.opts:list_opts
oslo.config.opts.defaults =
    rally = rally.common.opts:update_opt_defaults

[extras]
mysql =
  PyMySQL>=0.7.6  # MIT
postgres =
  psycopg2>=2.5  # LGPL/ZPL
